# substack-to-note

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.py
test_data/expected_output/: wordpress_export.xml
test_data/input/: posts.csv
test_data/input/posts/: test01.html
